--- a/HouseManage/HouseManage/Views/DailyCheck/CreateCheckResult.cshtml
+++ b/HouseManage/HouseManage/Views/DailyCheck/CreateCheckResult.cshtml
@@ -91,16 +91,15 @@
         </div>
 
         <script>
-            var temp = {
-                FWID: "",
-            };
+            var FWID;
+            var temp = {};
+            
             mui('.mui-scroll-wrapper').scroll({
                 deceleration: 0.0005 //flick 减速系数，系数越大，滚动速度越慢，滚动距离越小，默认值0.0006
             });
             mui('.bottomPopover').popover('toggle');
             window.onload = function () {
                 var height = document.documentElement.clientWidth;
-                this.console.log(height);
                 var idArray = window.location.search.split("?");
                 var id = idArray[1];
                 var scroll = this.document.getElementById("scroll");
@@ -121,25 +120,21 @@
                             a.innerHTML = data[i].SHOPBH + ":" + data[i].SHOP_NAME;
                             a.id = data[i].FWID;
                             a.addEventListener("click", function (e) {
-                                console.log(copydata);
                                 document.getElementById("SHOPBH").innerHTML = copydata.SHOPBH;
                                 document.getElementById("SHOPBH").value = copydata.SHOPBH;
                                 document.getElementById("ZHXM").innerHTML = copydata.ZHXM;
                                 document.getElementById("ZHXM").value = copydata.ZHXM;
                                 document.getElementById("SHOP_NAME").innerHTML = copydata.SHOP_NAME;
                                 document.getElementById("SHOP_NAME").value = copydata.SHOP_NAME;
-                                temp.FWID = copydata.FWID;
-                                
-                                mui.ajax("PartCreateCheckResult?FWID=" + temp.FWID + "&TASK_ID=" + id.split("=")[2], {
+                                FWID = copydata.FWID;                             
+                                mui.ajax("PartCreateCheckResult?FWID=" + FWID + "&TASK_ID=" + id.split("=")[2], {
                                     type: "get",
                                     success(data) {
                                         if (data.trim() != "") {
-                                            document.getElementById("checkdetail").innerHTML += data;
+                                             document.getElementById("checkdetail").innerHTML = data;
                                             
-                                            //DetailHtml += data;
-                                            console.log(DetailHtml);
+                                            
                                         }
-                                        console.log(data);
                                     },
                                     error: function (xhr, type, errorThrown) {
                                         console.log(type);
@@ -158,10 +153,8 @@
             }
             function CreateListForm() {
                 var ele = document.getElementById("statusbutton").firstChild;
-                console.log(ele);
             };
             function pass(id) {
-                console.log(id);
                 var ele = document.getElementById(id);
                 ele.className = "mui-btn mui-btn-primary";
                 temp[id] = 1;
@@ -170,6 +163,8 @@
                 var ele = document.getElementById(id);
                 ele.className = "mui-btn mui-btn-danger";
                 temp[id] = 0;
+                qualified = true;
+                
             }
             function submit() {
                 var ele = document.getElementsByName("radio1");
@@ -179,29 +174,46 @@
                     radiovalue = ele[i].value;
                     };
                 };
-                let RWBH = window.location.search.split("?")[1].split("=")[2];
-                console.log(window.location.search.split("?")[1].split("=")[2]);
+                var qualified = true;//检查内容详情是否有不合格项
+                for (var a in temp) {
+                    qualified = qualified && (temp[a]==1);
+                };
+                if (radiovalue == null || radiovalue == "") {
+                    window.alert("检查结果不能为空！");
+                }
+                else if (!qualified && radiovalue == 1) {
+                    window.alert("检查详情中有不合格的项，总体检查结果不能为合格！请确认!");
+                }
+                else {
+                    let RWBH = window.location.search.split("?")[1];
                 let Alltemp = {
                     TASK_ID: window.location.search.split("?")[1].split("=")[2],
                     JCJG: radiovalue,
                     ZGYQ: document.getElementById("describe").value,
                     WTMS: document.getElementById("Requirement").value,
-                };
+                    FWID: FWID
+                };   
                 Alltemp.RESULT_DETAIL = temp;
-                mui.ajax('PostCheckResult', {
+                if (qualified && temp.JCJG == 1) {
+                    window.alert("检查详情中有不合格的项，总体检查结果不能为合格！请确认!")
+                }
+                else {
+                     mui.ajax('PostCheckResult', {
                     type: 'post',
                     data: Alltemp,
                     timeout: 50000,
                     headers: { 'Content-Type': 'application/json' },
                     success: function (data) {
                         if (data.trim().toString() == "success") {
-                            console.log(123123);
-                            window.location.href = "DailyCheckDetail?RWBH=" + RWBH;
+                            window.location.href = "DailyCheckDetail?" + RWBH;
                         }
                     },
                     error: function (data) {
 
                     },
                 })
+                }
+               
+                }
             }
         </script>
