修改配置及推送代码

--- a/HouseManage/HouseManage/Views/Orders/Order.cshtml
+++ b/HouseManage/HouseManage/Views/Orders/Order.cshtml
@@ -148,6 +148,7 @@
                         }, 1000);
                     } else {
                         mui.alert("支付失败！", "提示");
+                        mui.hideLoading();
                     }
                 });
         }
