--- a/HouseManage/HouseManage/Views/MyShop/Payment.cshtml
+++ b/HouseManage/HouseManage/Views/MyShop/Payment.cshtml
@@ -188,7 +188,6 @@
                     <div id="scroll1" class="mui-scroll-wrapper">
                         <div class="mui-scroll" id="scroll_1">
                             <ul class="mui-table-view">
-                                
                             </ul>
                         </div>
                     </div>
@@ -260,16 +259,16 @@
                 return "不明类型";
             }
             var dayOffset = function datedifference(sDate1, sDate2) {
-                    var dateSpan,
-                        tempDate,
-                        iDays;
-                    sDate1 = Date.parse(sDate1);
-                    sDate2 = Date.parse(sDate2);
-                    dateSpan = sDate2 - sDate1;
-                    dateSpan = Math.abs(dateSpan);
-                    iDays = Math.floor(dateSpan / (24 * 3600 * 1000));
-                    return iDays
-                };
+                var dateSpan,
+                    tempDate,
+                    iDays;
+                sDate1 = Date.parse(sDate1);
+                sDate2 = Date.parse(sDate2);
+                dateSpan = sDate2 - sDate1;
+                dateSpan = Math.abs(dateSpan);
+                iDays = Math.floor(dateSpan / (24 * 3600 * 1000));
+                return iDays
+            };
             var getDate = function (time) {
                 var time = new Date(time);
                 return (time.getMonth() + 1).toString() + "月" + time.getDate().toString() + "日";
@@ -285,48 +284,50 @@
             }
             var getHtml = function (data) {
                 var Html = `<li class="mui-table-view-cell flleft">
-                                                    <div class="mui-col-sm-6 mui-col-xs-6">
-                                                        <div class="mui-col-sm-12 mui-col-xs-12">
-                                                            {DATE}应缴（元）
+                                                        <div class="mui-col-sm-6 mui-col-xs-6">
+                                                            <div class="mui-col-sm-12 mui-col-xs-12">
+                                                                {DATE}应缴（元）
+                                                            </div>
+                                                         <div class="mui-col-sm-12 mui-col-xs-12">`;
+                if (data.JFLX==0) {
+                                                        Html += `{JFJE}`;
+                }
+                Html += `                                </div> 
+                                                      </div>
+                                                        <div class="mui-col-sm-2 mui-col-xs-2 font12">
+                                                            {JFLX}
                                                         </div>
-                                                        <div class="mui-col-sm-12 mui-col-xs-12">
-                                                            {JFJE}
-                                                        </div>
-                                                    </div>
-                                                    <div class="mui-col-sm-2 mui-col-xs-2 font12">
-                                                        {JFLX}
-                                                    </div>
-                                                    <div class="mui-col-sm-4 mui-col-xs-4">
-                                                        <div class="mui-col-sm-12 mui-col-xs-12">
-                                                            还剩{YXQS}天缴费
-                                                        </div>
-                                                        <div class="mui-col-sm-12 mui-col-xs-12">`;
+                                                        <div class="mui-col-sm-4 mui-col-xs-4">
+                                                            <div class="mui-col-sm-12 mui-col-xs-12">
+                                                                还剩{YXQS}天缴费
+                                                            </div>
+                                                            <div class="mui-col-sm-12 mui-col-xs-12">`;
                 if (data.JFZT == 0) {
                     Html += '<button type="button" class="mui-btn mui-btn-primary gopay" url="r={RECORD_ID}&u={CZ_SHID}&f={FWID}">去支付</button>';
                 } else {
                     Html += '<button type="button" class="mui-btn mui-btn-primary mui-btn-outlined gopay" url="r={RECORD_ID}&u={CZ_SHID}&f={FWID}">详 情</button>'
                 }
                 Html += `                </div>
-                                                    </div>
-                                        </li>`;
-                Html = Html.format({ JFJE: data.JFJE, JFLX: getType(data.JFLX), YXQS: getDay(data.YXQS), DATE: getDate(data.YXQS), RECORD_ID: data.RECORD_ID, CZ_SHID: data.CZ_SHID, FWID: data.FWID});
+                                                        </div>
+                                            </li>`;
+                Html = Html.format({ JFJE: data.JFJE, JFLX: getType(data.JFLX), YXQS: getDay(data.YXQS), DATE: getDate(data.YXQS), RECORD_ID: data.RECORD_ID, CZ_SHID: data.CZ_SHID, FWID: data.FWID });
                 return Html;
             }
             var getHtmlOrder = function (data) {
                 var html = `<li class="mui-table-view-cell flleft detail" url="r={RECORD_ID}&u={CZ_SHID}&f={FWID}">
-                                                    <div class="mui-col-sm-9 mui-col-xs-9 detail">
-                                                        <div class="mui-col-sm-12 mui-col-xs-12">
-                                                            {JFLX}{JFJE}元
+                                                        <div class="mui-col-sm-9 mui-col-xs-9 detail">
+                                                            <div class="mui-col-sm-12 mui-col-xs-12">
+                                                                {JFLX}{JFJE}元
+                                                            </div>
+                                                            <div class="mui-col-sm-12 mui-col-xs-12 font12">
+                                                                {CREATE_TIME}
+                                                            </div>
                                                         </div>
-                                                        <div class="mui-col-sm-12 mui-col-xs-12 font12">
-                                                            {CREATE_TIME}
+                                                        <div class="mui-col-sm-3 mui-col-xs-3">
+                                                            {STATE}
                                                         </div>
-                                                    </div>
-                                                    <div class="mui-col-sm-3 mui-col-xs-3">
-                                                        {STATE}
-                                                    </div>
-                                                </li>`;
-                html = html.format({ FWID: data.FWID,CZ_SHID: data.CZ_SHID,RECORD_ID: data.RECORD_ID,JFJE: data.JFJE, JFLX: getType(data.JFLX), CREATE_TIME: new Date(data.CREATE_TIME).formatDate("yyyy-MM-dd hh:mm:ss"), STATE:"缴费成功"});
+                                                    </li>`;
+                html = html.format({ FWID: data.FWID, CZ_SHID: data.CZ_SHID, RECORD_ID: data.RECORD_ID, JFJE: data.JFJE, JFLX: getType(data.JFLX), CREATE_TIME: new Date(data.CREATE_TIME).formatDate("yyyy-MM-dd hh:mm:ss"), STATE: "缴费成功" });
                 return html;
             }
             var getPayReminder = function (setVal, callback) {
@@ -354,20 +355,20 @@
                         reminderPage = page;
                         conditions.Page = reminderPage;
                     }, function () {
-                            orderPage = page;
-                            conditions.Page = orderPage;
+                        orderPage = page;
+                        conditions.Page = orderPage;
                     })
                 });
             }
             var downLoad = function () {
                 mui.showLoading();
-                var self= this;
+                var self = this;
                 conditions.Page.PageIndex = 1;
                 setTimeout(function () {
                     SetHtml(function (html) {
                         if (self.element == undefined) { //JS触发
                             var idInfo = jq("#segmentedControl .mui-active")[0].getAttribute("href");
-                            var ul = document.querySelector(idInfo+' .mui-table-view');
+                            var ul = document.querySelector(idInfo + ' .mui-table-view');
                             ul.innerHTML = html;
                         } else {
                             var ul = self.element.querySelector('.mui-table-view');
@@ -407,7 +408,7 @@
                             callback: downLoad
                         },
                         up: {
-                            height:'50px',
+                            height: '50px',
                             callback: upLoad
                         }
                     });
@@ -431,11 +432,11 @@
                 urlChange(function () {
                     conditions.Page = reminderPage;
                 }, function () {
-                        conditions.Page = orderPage;
-                        if (isFirst) { // 首次加载需要执行Ixia
-                            isFirst = false;
-                            downLoad();
-                        }
+                    conditions.Page = orderPage;
+                    if (isFirst) { // 首次加载需要执行Ixia
+                        isFirst = false;
+                        downLoad();
+                    }
                 })
             })
             var tapInit = function () {
