修改完善单据数据

--- a/HouseManage/HouseManage/Views/Orders/Order.cshtml
+++ b/HouseManage/HouseManage/Views/Orders/Order.cshtml
@@ -265,7 +265,7 @@
             });
         })
         jq("button.detail").on("tap", function () {
-            window.location.href = "OrderDetail/@d.ID";
+            window.location.href = "Receipt/@d.ID";
         });
         jq("#wnumber input").on("change", function () {
             var number = jq(this).val();
