增加单据查询条件，增加缴费列表保留两位小数

--- a/HouseManage/HouseManage/Views/Orders/Order.cshtml
+++ b/HouseManage/HouseManage/Views/Orders/Order.cshtml
@@ -104,7 +104,7 @@
             {
                 <button type="button" class="mui-btn mui-btn-primary pay" style="width:91%;" id="submit">立即支付</button>
             }
-            else
+            else if(d.CONFIRM_RECIVEMONEY == 1)
             {
                 <button type="button" class="mui-btn mui-btn-success detail" style="width:91%;" id="submit">查看收据</button>
             }
